Adding more info to burning man page

--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -56,7 +56,18 @@
     the first time seeing it "properly" stretched over the base it was made for.
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1iMh-aFOTPsy0_fScsNljvlHvc-H_eP3o" />
+  <p>
+    This is what it would look like "improperly" strectched over the base, but with the eyes, teeth, hair, and foam base
+    ears in place to get an idea of how progress is going and the visual direction it's headed in.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1iTAiyVe_wwxSdCrDyBbP5SiqGliCm10c" />
+  <p>
+    Once the face is sewn together, baseball stitching in the ears is next. The inner ear is just black felt to give a
+    sense of depth and the foam lobes are wrapped in more fur which is hot glued on. After the ears are in place, I added
+    select areas of thin 1/4" foam to the interior of the fur mask. I felt this would help keep things looking rounded
+    and plump; there wouldn't be any chance for loose fur to be wrinkled in these areas and it helped reduce visibility
+    of seams. The entire fur mask is ready for permanent affixation to the base!
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1icXbNWwDfQC76vBW87k1zHEGGfNR67FH" />
   <p>
     This was another novel thing I tried out in my build process: I wanted to REALLY be sure that the fur would never
@@ -138,8 +149,16 @@
     decided to make it plantigrade (no special padding)
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hSwGnwUpbYWFdfAK36R3RgRE3wuQKCHH" />
+  <p>
+    Once all pieces were cut out (several days of effort) I double checked they were all there by laying them out.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hX5pz24gvc3o_AhP6Qht5BTFSarz6FbC" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hlRn0Rb9PiiaI0mIVBoU-6hfg02NRXhj" />
+  <p>
+    I decided to sew it up in left and right halves independently which helped make the amount of material you're
+    working with at any moment much more manageable. I added a zipper down the middle front and I followed
+    <a href="https://www.etsy.com/listing/684815037/premium-tutorial-deluxe-zipper-technique">this AMAZING deluxe zipper guide</a>.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hcfIkP85XabSqM3eeXPiiYuehmSr0aG7" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1jXBEYkAf_MP4YhXOneJNwLoDdk3oh_fW" />
 
@@ -148,25 +167,53 @@
     <h2>Feet</h2>
   </div>
 
+  <p>
+    The feet start as a pair of cheap crocs from Walmart, which are then glued with e6000 to eva foam mats. The mats are
+    cut out to the general footprint shape desired, an thick 1" foam is glued into the shape of toes. I followed a
+    pattern for the first pair I made and they were WAAAYY to big. I ditched the pattern and free-handed the footprint
+    to be as small as I could make it to still fit the shoes then re-did the foam toes in the same way as before, but
+    smaller this time.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hIF5p7vxfDE8LcK8EZqACYqFgwsSjJzr" />
+  <p>
+    Once the overall shape felt good enough, I added some stiff foam around the back of the heels then masking taped up
+    one of the feet to get a fur pattern for it.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hZFnxe1kZ67B_bGCilIGz9CT2p9ppbnr" />
+  <p>
+    I cut out the fur based on the pattern, sewed it into a "cover" for each foot (doing a mirrored pattern for the
+    other foot), then glued it all down with hot glue and e6000.
+  </p>
+  <p>
+    Not pictured yet is the rubber threading I added to the underside of the feet. I didn't realize how insanely
+    slippery the feet are on wet surfaces till I walked on one and nearly fell. It's no joke how slippery the feet were
+    on smooth wet floors. 
+  </p>
 
   <div class="divider"></div>
   <div id="tail" class="section-header">
     <h2>Tail</h2>
-    
   </div>
 
   <p>I don't have many progress pics of the tail, but I tried to make it like
-    <a href="https://youtu.be/vFkfsAU17KQ?si=RiKJdsrz2trMiFHL&t=96">a "super motion" tail</a>.this is what it looks
-    like as the end result
+    <a href="https://youtu.be/vFkfsAU17KQ?si=RiKJdsrz2trMiFHL&t=96">a "super motion" tail</a>. I don't think I did a
+    bad job but I think it would be a lot better. I tried multiple times to get the tail motion right but whenever
+    the fur is applied it becomes too stiff and doesn't wag correctly. This is what it looks
+    like as the end result:
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1jL99ze7usjJzkqf4-5q_XonvklwCn5nE" />
 
   
+  <div class="divider"></div>
   <div id="result" class="section-header">
     <h2>End Results</h2>
   </div>
 
-  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1jL99ze7usjJzkqf4-5q_XonvklwCn5nE" /> -->
+  <p>
+    I'm very happy with how it came out! For a first attempt at making a suit, I think it turned out <i>especially</i>
+    well. Here are a few pics I had taken of me in it at FC and LVFC!
+  </p>
+  
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/13nUP1ZGG8CqDYxF7_AH0KF2ium4HzpJn" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1K4N-oq8LWmQ8ZTVijDah-04uPHEKTwjH" />
 </mat-card>
