--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -14,13 +14,17 @@
 
   <div class="divider"></div>
   <h2>Thursday</h2>
+  <p>
+    I came late to the party because of work (mistake to have done that) and since I was going to be meeting a lot of
+    new camp mates I wanted to make an impression so I bought sushi in Reno and kept it on ice for the last hour drive
+    out to the playa.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1dcpKKfxqnnMkN6m68u5JMPxxxNrlu4HU" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1dfepnJDoDTPxKHDiRgCkD1K2I0Lprm9w" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1dy2W83cd1S-dxdaGiBielPX_VHlsa1n1" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1eQCwouvilXuVQUsONlq7RhDnFdKVYWLu" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1f3U4ctb_BYvZrBq96U2spH7A1YK8yazB" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1frAMFJoDtbgOj40lqdMiy0xGEfTS0GBd" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1h8Q0Z2CL5Kfeg66mS1QqcwmXHRWidmrG" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1f24V_l4E6qCcqEAPNonqZeuvBzPboFtT" />
 
   <div class="divider"></div>
@@ -28,11 +32,17 @@
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1eJam7MQq8hFLr7fZHeFjXEL--wbkCPa_" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fq4qjrR56wBkms1A4nY4SFyTsT7dhcIh" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fbN-gbsk6_wRhy4o1rSZ09mYE2OmC6Nh" />
+  <p>
+    This peice was one of my favorites, it was a giant bison made of driftwood with a guiding lantern the illuminated
+    the night from a distance, and once you approached it there would be a ladder to climb up onto a porch alongside
+    the torso. You could enter into the torso through a decaying wooden door, and inside there was an immaculately done
+    up cottage living room, complete with a rocking chair, wood-burning cast iron fireplace, rugs, and a small
+    chandelier at head level. I regret not getting more pictures of this one!
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fTRwkDn6vEJWsC240-GM7sqgABi-HlyJ" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fC-7S0hK4nHbfc3KJ0vqti5kr3cfBFx8" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fGJdrG6KSzC0xqMBY-xnw-xH88VqLp5R" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fTitUpWW1vzaINwgbUSkrrrAaAXpbpih" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fN_XTET2VT57lVDMYlnUs5MhUlYKh0xS" />
   
   <div class="divider"></div>
   <h2>Saturday</h2>
@@ -40,7 +50,9 @@
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1eIt9fFILRSW8hvPFBspF7cU6uRP6GktA" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1eIsBRl-FJFAgt3tD8jP59kP0NUtBXPPU" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fNU-LlmRO2yaawkyL1YEbHw8VlcLTXl7" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fN_XTET2VT57lVDMYlnUs5MhUlYKh0xS" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fh-Ec1AlbD6uDHN0sEYlarZh75LqWy_N" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1h8Q0Z2CL5Kfeg66mS1QqcwmXHRWidmrG" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fgtlRrmWd3eGwOiIo-8wVEvp5EFw1FX7" />
 
   <div class="divider"></div>
@@ -48,6 +60,16 @@
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1gEHinc47Zo0VVTRi-CRkC40ejcLyV1vU" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1gC1jjgVhm18mlAr0tGQszk8jzBTkLbPy" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1gfTB-piVn5TtMAe6VWa_NlGud9eXGUa0" />
+  <p>
+    Watching the man burn was incredible. Not only was it by far the largest bonfire I'd ever seen by far, but it had
+    legitimately the best fireworks show I've ever seen in my life. It's not by video, but
+    <a href="https://www.youtube.com/watch?v=dHDV_VB6dkI" target="_blank">here's a recording of it</a>. I vividly
+    remember being told by friends to never look away from the man once the official start time elapses, because there
+    would be a large explosion to signal the start of the man burning. That explosion came after the fireworks, and it
+    was this perfectly round ball of light radiant heat you could feel on your face from a quarter mile away that
+    materialized out of nowhere in an instant. The audible <b>POP!</b> of it hits you delayed and it really drives home
+    the size of the pyrotechnics going on.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1gZMhMmmCasD4pDIidUVBUb0kdYTV_UGw" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1ggWO04R0GZzAJW6Cq07mZ2Um86QHFBmD" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1h01dqqYqIiBEN-VzYfe835pUH3M2K5to" />
