Adding placeholder for trip to Ushuaia

--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -9,8 +9,9 @@
 <mat-card>
   <h1 style="text-align: center">Burning Man, 2023</h1>
   <div class="divider"></div>
-  <!-- TODO: Intro description and forward -->
-  https://drive.google.com/file/d/1fC-7S0hK4nHbfc3KJ0vqti5kr3cfBFx8/view?usp=sharing
+  <!-- TODO: Intro description and forward -->  
+
+  <h1 style="text-align: center"><b>THIS PAGE IS STILL HEAVILY UNDER CONSTRUCTION</b></h1>
 
   <div class="divider"></div>
   <h2>Thursday</h2>
