--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -6,6 +6,30 @@
 </nav>
 
 <mat-card>
+  <!-- <mat-card-header>
+    <mat-card-title>Europe Trip, Fall 2023</mat-card-title>
+    <mat-card-subtitle>Ein voller liter!</mat-card-subtitle>
+    <a href="/europe_trip_2023"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    After many years of deliberating what tattoos to get first I finally decided on visiting an artist
+    in Poland, so why not make a trip out of it if I'm already going that far? My trip was Netherlands
+    -> Germany -> Poland -> Czech Republic
+  </p>
+</mat-card> -->
+  <mat-card-header>
+    <mat-card-title>Burning Man 2023</mat-card-title>
+    <mat-card-subtitle>Playing in the mud</mat-card-subtitle>
+    <a href="/burning_man_2023"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    For many years I hadn't thought much about Burning Man; I'd met a handful of people that made
+    me think most burners were self-interested hippies trying to get instagram pictures and not much
+    else. A few key experiences made me have second thoughts on that impression, and when I was offered
+    a spot at a camp I took it and went to see what the hype was about.
+  </p>
+</mat-card>
+<mat-card>
   <mat-card-header>
     <mat-card-title>Climbing Mt. Shasta</mat-card-title>
     <mat-card-subtitle>Searching for Telos (not really)</mat-card-subtitle>
