Fixing URL routes

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -9,7 +9,7 @@
   <mat-card-header>
     <mat-card-title>CSS Injections for Websites</mat-card-title>
     <mat-card-subtitle>The internet how it should be</mat-card-subtitle>
-    <a href="/cssinjection"><mat-icon>launch</mat-icon></a>
+    <a href="/css-injection"><mat-icon>launch</mat-icon></a>
   </mat-card-header>
   <p>
     A nice an concise set of CSS injections I add to specific websites for better browsing experience.
