Filling in more burning man stories

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -20,7 +20,7 @@
   <mat-card-header>
     <mat-card-title>Burning Man 2023</mat-card-title>
     <mat-card-subtitle>Playing in the mud</mat-card-subtitle>
-    <a href="/burning_man_2023"><mat-icon>launch</mat-icon></a>
+    <a href="/burning-man-2023"><mat-icon>launch</mat-icon></a>
   </mat-card-header>
   <p>
     For many years I hadn't thought much about Burning Man; I'd met a handful of people that made
@@ -44,7 +44,7 @@
   <mat-card-header>
     <mat-card-title>Hiking the Sahara Desert</mat-card-title>
     <mat-card-subtitle>no, we didn't ride the camels</mat-card-subtitle>
-    <a href="/mauritania_trip"><mat-icon>launch</mat-icon></a>
+    <a href="/mauritania-trip"><mat-icon>launch</mat-icon></a>
   </mat-card-header>
   <p>
     In the early spring of 2023 I solo traveled to Mauritania, west Africa to hike through a portion
