--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -26,6 +26,16 @@
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1eQCwouvilXuVQUsONlq7RhDnFdKVYWLu" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1f3U4ctb_BYvZrBq96U2spH7A1YK8yazB" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1frAMFJoDtbgOj40lqdMiy0xGEfTS0GBd" />
+  <p>
+    This next image is one of my favorite pictures of the entire burn, because it's very representative of the kind of thing
+    you experience at night when biking through deep playa. Riding off into the dark while high, you hear the distant
+    thumping of several sound camps playing music in the distance. Ahead of you there is one or several dim lights on
+    the horizon, and you decide to venture deeper into the desert to see what they are, like an angler fish drawing in
+    curious creatures from the darkness. The warm wind is moderately blowing, kicking up a slow rolling cloud of dust
+    everywhere you go and as you get closer to the light source you see it's a mobile converted bus, parked like an
+    oasis in vast nothingness around you. You knock on the door with a smile, and are greated with warm smiles in
+    return. The interior is wooden paneled and decorated to make you feel like you're below deck on a wooden ship. 
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1f24V_l4E6qCcqEAPNonqZeuvBzPboFtT" />
 
   <div class="divider"></div>
@@ -43,6 +53,17 @@
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fTRwkDn6vEJWsC240-GM7sqgABi-HlyJ" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fC-7S0hK4nHbfc3KJ0vqti5kr3cfBFx8" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fGJdrG6KSzC0xqMBY-xnw-xH88VqLp5R" />
+  <p>
+    I visited the temple, but didn't take any pictures besides this one from the outside. As you approach it, the crowds
+    energy completely changes and everything becomes silent and pensive. The air practically weighs heavily in your lungs
+    with how somber the mood is inside. The central room is surrounded by a circular ring-shaped pathway with numerous
+    alcoves to maximize the surface area on the walls. Even still, the walls are filled to the brim with stapled on
+    letters addressed to the deceased, memorial posters, sharpied notes onto the walls, and sentimental memorabilia.
+    Groups of people sit in silence together in the alcoves and central room in silence, many silently crying. The structure
+    is designed to be burned down the day after the man burns, as a cathartic release. I felt conflicted being in the
+    temple; I had no grief in my heart that merited release. I felt with each letter or open note I saw, I was intruding
+    deeply into some stranger's life. 
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fTitUpWW1vzaINwgbUSkrrrAaAXpbpih" />
   
   <div class="divider"></div>
@@ -53,6 +74,14 @@
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fNU-LlmRO2yaawkyL1YEbHw8VlcLTXl7" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fN_XTET2VT57lVDMYlnUs5MhUlYKh0xS" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fh-Ec1AlbD6uDHN0sEYlarZh75LqWy_N" />
+  <p>
+    Towards one of the very farthest corners of the outer play, I saw the very faintest of yellow lights flickering like
+    a candle in the far distance. It was so small that I thought it might be someone's distant headlamp but as it
+    remained motionless I decided to ride towards it. As I got closer, I saw it surrounded by a large dim red glow, and
+    happening upon it I found it was a giant replica of the Fat Man atom bomb acting as a massive combo space heater and
+    sausage grill! It was a father-son duo that built it and hauled it out there. A dozen people were around it, how could
+    I have missed this after so much time exploring out here?
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1h8Q0Z2CL5Kfeg66mS1QqcwmXHRWidmrG" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1fgtlRrmWd3eGwOiIo-8wVEvp5EFw1FX7" />
 
@@ -72,7 +101,21 @@
     the size of the pyrotechnics going on.
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1gZMhMmmCasD4pDIidUVBUb0kdYTV_UGw" />
+  <p>
+    As the man and structure he's on burns down to a smoldering hill and the radiant heat begins to border on being
+    tolerable, the guards allow everyone to approach. A large portion of people begin stripping off their clothes and
+    start to run in a massive circle around the bonfire. I joined in and followed the crowd as it raced around, the heat
+    unbelievably hot. The pile was square in shape and rounding the corners was so hot at times you'd be jumping over
+    the section and poeple would be on the sidelines with spray bottles of water to help cool you off. I set me clothes
+    on the ground, but completely lost track of them by the time I was ready to get dressed again and wandered naked for
+    15 minutes through the hundreds of side lined crowd looking for my clothes pile. Being naked around strangers you'll
+    never see again wasn't as big an issue as how cold it was getting without direct line of sight to the bonfire. 
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1ggWO04R0GZzAJW6Cq07mZ2Um86QHFBmD" />
+  <p>
+    While the ferver of the the main burn was slowing down, all the art cars had been encircling the area, all on full
+    display for the main night, car after car lined up pouring out music and light.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1h01dqqYqIiBEN-VzYfe835pUH3M2K5to" />
 
   
