Adding travels page route to Ushuaia placeholder

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -6,6 +6,17 @@
 </nav>
 
 <mat-card>
+  <mat-card-header>
+    <mat-card-title>Motorcycle ride from San Francisco to the Ushuaia, Argentina (Upcoming)</mat-card-title>
+    <mat-card-subtitle>Don't get got</mat-card-subtitle>
+    <a href="/road-to-ushuaia"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    This July, I'm planning to ride my motorcycle on the largest expedition I've ever done; a 6 month
+    ride from California to the very bottom of South America. I left my job in order to properly
+    accomplish this one.
+  </p>
+</mat-card>
   <!-- <mat-card-header>
     <mat-card-title>Europe Trip, Fall 2023</mat-card-title>
     <mat-card-subtitle>Ein voller liter!</mat-card-subtitle>
@@ -17,6 +28,7 @@
     -> Germany -> Poland -> Czech Republic
   </p>
 </mat-card> -->
+<mat-card>
   <mat-card-header>
     <mat-card-title>Burning Man 2023</mat-card-title>
     <mat-card-subtitle>Playing in the mud</mat-card-subtitle>
