Making all mat-cards clickable
No more need to click the redirect button on each card

--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -213,10 +213,12 @@
     <iframe class="youtube-player" src="https://www.youtube.com/embed/gcYJ2fIjods" title="YouTube video player"
       frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share"
       allowfullscreen></iframe>
-    We had lunch here, more Mauritanian couscous. Unfortunately the wind picked up just as we started eating and blew a
-    bunch of sand into our food. Oh well, you really just have to ignore the grit. All the food typically has some
-    degree of grit because the sand gets literally everywhere. You just don't bring your top and bottom rows of teeth
-    together fully and ignore it. We rested here longer than normal. This afternoon was a little hotter than most so we
+    We had lunch here, more Mauritanian couscous with canned fish and carrots. Unfortunately the wind picked up just as we
+    started eating and blew a bunch of sand into our food. Oh well, you really just have to ignore the grit. All the
+    food typically has some degree of grit because the sand gets literally everywhere. You get used to not bringing your
+    top and bottom rows of teeth together fully and ignore it when you do hear a sandy crunch.
+    <img loading="lazy" src="https://lh3.google.com/u/0/d/1cgovwSUm35T-yOopMXfKuPTfKYhooh-j" />
+    We rested here longer than normal. This afternoon was a little hotter than most so we
     waited it out accordingly. It's been hard to write these logs not because they're difficult but because I never feel
     like I have a chance; even during these longer rests were I have nothing to do but sit and stare at the landscape.
     They don't feel opportune! "Just be in the moment" I tell myself and it makes me want to procrastinate writing
