--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -5,59 +5,62 @@
   <a mat-tab-link routerLink="/career">Career</a>
 </nav>
 
-<mat-card>
+<mat-card routerLink="/css-injection">
   <mat-card-header>
     <mat-card-title>CSS Injections for Websites</mat-card-title>
     <mat-card-subtitle>The internet how it should be</mat-card-subtitle>
-    <a href="/css-injection"><mat-icon>launch</mat-icon></a>
   </mat-card-header>
   <p>
     A nice an concise set of CSS injections I add to specific websites for better browsing experience.
   </p>
 </mat-card>
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Flip Dot Wall Project</mat-card-title>
-    <mat-card-subtitle>like oldschool train displays but better</mat-card-subtitle>
-    <a href="https://imgur.com/a/BrJ20zV" target="_blank"><mat-icon>launch</mat-icon></a>
-  </mat-card-header>
-  <p>
-    An old wall of flip dots at work fell into disrepair, and the panels were being parted out.
-    I was able to snag a few of them and recreate the wall in a miniature version! It even uses
-    a depth camera to show your silhouette in real time as you move in front of it like the original.
-  </p>
-</mat-card>
+
+<a href="https://imgur.com/a/BrJ20zV" target="_blank" class="no-underline">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Flip Dot Wall Project</mat-card-title>
+      <mat-card-subtitle>like oldschool train displays but better</mat-card-subtitle>
+    </mat-card-header>
+    <p>
+      An old wall of flip dots at work fell into disrepair, and the panels were being parted out.
+      I was able to snag a few of them and recreate the wall in a miniature version! It even uses
+      a depth camera to show your silhouette in real time as you move in front of it like the original.
+    </p>
+  </mat-card>
+</a>
+
+<a href="https://imgur.com/a/dxwt7oJ" target="_blank" class="no-underline">
 <mat-card>
   <mat-card-header>
     <mat-card-title>Faux Neon Sign Art</mat-card-title>
     <mat-card-subtitle>neon signs without glass blowing</mat-card-subtitle>
-    <a href="https://imgur.com/a/dxwt7oJ" target="_blank"><mat-icon>launch</mat-icon></a>
   </mat-card-header>
   <p>
     I found some art online that inspired me to try out making faux neon signs out of led strips
     tucked inside of diffuser tubing. The end result speaks for itself!
   </p>
 </mat-card>
+</a>
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>16 Segment Minitron Altimeter</mat-card-title>
-    <mat-card-subtitle>falling with style</mat-card-subtitle>
-    <a href="https://imgur.com/a/gBYLfQS" target="_blank"><mat-icon>launch</mat-icon></a>
-  </mat-card-header>
-  <p>
-    The altimeter is a must have instrument every time you go skydiving, so why not make it cool?
-    I savaged several <a href="https://www.industrialalchemy.org/storearticleview.php?item=113" target="_blank">KW-105AL diplays</a>
-    from avionics equipment an the good ol' BMP280 barometer to make an altimeter with.<br>
-    Finding even 4 of these displays <i>anywhere</i> online literally took months of scouring.
-  </p>
-</mat-card>
+<a href="https://imgur.com/a/gBYLfQS" target="_blank" class="no-underline">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>16 Segment Minitron Altimeter</mat-card-title>
+      <mat-card-subtitle>falling with style</mat-card-subtitle>
+    </mat-card-header>
+    <p>
+      The altimeter is a must have instrument every time you go skydiving, so why not make it cool?
+      I savaged several <a href="https://www.industrialalchemy.org/storearticleview.php?item=113" target="_blank">KW-105AL diplays</a>
+      from avionics equipment an the good ol' BMP280 barometer to make an altimeter with.<br>
+      Finding even 4 of these displays <i>anywhere</i> online literally took months of scouring.
+    </p>
+  </mat-card>
+</a>
 
-<mat-card>
+<mat-card routerLink="/qr/about">
   <mat-card-header>
     <mat-card-title>QR Code Tattoo</mat-card-title>
     <mat-card-subtitle>yes, it's permanent</mat-card-subtitle>
-    <a routerLink="/qr/about"><mat-icon>launch</mat-icon></a>
   </mat-card-header>
   <p>
     The QR code goes to qrtatt.ooo, and can do some very fancy stuff! Click the link in the upper
@@ -65,78 +68,82 @@
   </p>
 </mat-card>
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Smart Pay Casio Watch</mat-card-title>
-    <mat-card-subtitle>[hiatus]</mat-card-subtitle>
-    <a href="https://imgur.com/a/L7AnwLG" target="_blank"><mat-icon>launch</mat-icon></a>
-  </mat-card-header>
-  <p>
-    I like the tap-to-pay features of smart watches, but don't want a fully featured smart watch
-    that needs to be recharged every single day to work. Now that contactless payment via NFC
-    chips is much more common, I wanted to make my own ultra lightweight contactless payment watch.
-    I attempted to make it with favorite cheap digital watch - the Casio A168WEM, a custom NFC
-    antenna I had printed on a flex PCB from Oshpark, and a NFC chip that I got by melting down
-    one of my credit cards in acetone.<br>
-    Outside of the watch, the NFC chip and custom antenna worked like a charm!! However, I get
-    too much parasitic capacitance or other inteference when nestled in the digital watch case.
-    I'll need to figure this out to solve it and call it done.
-  </p>
-  <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="a/L7AnwLG"  >
-    <a href="https://imgur.com/a/L7AnwLG" target="_blank">Progress on custom contactless payment watch</a>
-  </blockquote> -->
-</mat-card>
+<a href="https://imgur.com/a/L7AnwLG" target="_blank" class="no-underline">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Smart Pay Casio Watch</mat-card-title>
+      <mat-card-subtitle>[hiatus]</mat-card-subtitle>
+    </mat-card-header>
+    <p>
+      I like the tap-to-pay features of smart watches, but don't want a fully featured smart watch
+      that needs to be recharged every single day to work. Now that contactless payment via NFC
+      chips is much more common, I wanted to make my own ultra lightweight contactless payment watch.
+      I attempted to make it with favorite cheap digital watch - the Casio A168WEM, a custom NFC
+      antenna I had printed on a flex PCB from Oshpark, and a NFC chip that I got by melting down
+      one of my credit cards in acetone.<br>
+      Outside of the watch, the NFC chip and custom antenna worked like a charm!! However, I get
+      too much parasitic capacitance or other inteference when nestled in the digital watch case.
+      I'll need to figure this out to solve it and call it done.
+    </p>
+    <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="a/L7AnwLG"  >
+      <a href="https://imgur.com/a/L7AnwLG" target="_blank">Progress on custom contactless payment watch</a>
+    </blockquote> -->
+  </mat-card>
+</a>
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Electric Mountainboard</mat-card-title>
-    <mat-card-subtitle>very stoked</mat-card-subtitle>
-    <a href="https://imgur.com/a/YKbkF02" target="_blank"><mat-icon>launch</mat-icon></a>
-  </mat-card-header>
-  <p>
-    A road bike is to a mounntain bike, as a skateboard is to a mountainboard. Their height of popularity
-    was in the early 2000's along with the X-games. Some compare it to the sensation of snowboarding,
-    but like most analogies it's a little bit of a stetch.<br>
-    This was a major project where I learned about good battery design, some machining skills, and a
-    lot of patience.
-  </p>
-  <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="a/YKbkF02">
-    <a href="https://imgur.com/a/YKbkF02" target="_blank">Electric Mountainboard build</a>
-  </blockquote> -->
-</mat-card>
+<a href="https://imgur.com/a/YKbkF02" target="_blank" class="no-underline">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Electric Mountainboard</mat-card-title>
+      <mat-card-subtitle>very stoked</mat-card-subtitle>
+    </mat-card-header>
+    <p>
+      A road bike is to a mounntain bike, as a skateboard is to a mountainboard. Their height of popularity
+      was in the early 2000's along with the X-games. Some compare it to the sensation of snowboarding,
+      but like most analogies it's a little bit of a stetch.<br>
+      This was a major project where I learned about good battery design, some machining skills, and a
+      lot of patience.
+    </p>
+    <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="a/YKbkF02">
+      <a href="https://imgur.com/a/YKbkF02" target="_blank">Electric Mountainboard build</a>
+    </blockquote> -->
+  </mat-card>
+</a>
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Dot Matrix Watch</mat-card-title>
-    <mat-card-subtitle>[hiatus]</mat-card-subtitle>
-    <a href="https://imgur.com/a/Kc7NzhB" target="_blank"><mat-icon>launch</mat-icon></a>
-  </mat-card-header>
-  <p>
-    Wanting to make another watch after finishing the nixie tube watch, I decided to try working with
-    some <a href="https://www.industrialalchemy.org/articleview.php?item=750" target="_blank">retro dot matrix dipslays</a>.
-    These are REALLY neet to look at if you can get your hands on them. They're very early gallium-phosphate
-    LEDS; the only application I've seen them used in are for commercial airplane cockpit displays. Because
-    these were used in avionics, they are ceramic case-bodies and the top layer is saphire. I was able to
-    write <a href="https://github.com/blakewilliams1/dot-matrix-watch-2" target="_blank">these display drivers</a> for it
-    based on <a href="http://www.datasheetspdf.com/pdf-down/H/D/S/HDSP2000_Hewlett-Packard.pdf" target="_blank">these xerox scans</a>
-    of old datasheets from the 1970's.
-  </p>
-</mat-card>
+<a href="https://imgur.com/a/Kc7NzhB" target="_blank" class="no-underline">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Dot Matrix Watch</mat-card-title>
+      <mat-card-subtitle>[hiatus]</mat-card-subtitle>
+    </mat-card-header>
+    <p>
+      Wanting to make another watch after finishing the nixie tube watch, I decided to try working with
+      some <a href="https://www.industrialalchemy.org/articleview.php?item=750" target="_blank">retro dot matrix dipslays</a>.
+      These are REALLY neet to look at if you can get your hands on them. They're very early gallium-phosphate
+      LEDS; the only application I've seen them used in are for commercial airplane cockpit displays. Because
+      these were used in avionics, they are ceramic case-bodies and the top layer is saphire. I was able to
+      write <a href="https://github.com/blakewilliams1/dot-matrix-watch-2" target="_blank">these display drivers</a> for it
+      based on <a href="http://www.datasheetspdf.com/pdf-down/H/D/S/HDSP2000_Hewlett-Packard.pdf" target="_blank">these xerox scans</a>
+      of old datasheets from the 1970's.
+    </p>
+  </mat-card>
+</a>
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Nixie Tube Wrist Watch</mat-card-title>
-    <mat-card-subtitle>Check the divergence!</mat-card-subtitle>
-    <a href="https://imgur.com/a/sMkJgo1" target="_blank"><mat-icon>launch</mat-icon></a>
-  </mat-card-header>
-  <p>
-    This was one of my first exposures to hardware design beyond simple arudino proto boards that
-    drove small motors or read from simple sensors. I heavily based my schematic off of an existing
-    one I found online by <a href="http://www.cathodecorner.com/nixiewatch/firmware/firmware.html" target="_blank">David Forbes</a>.
-    The main difference is that mine uses four IN-17 nixie tubes instead of just two B5870L tubes.
-    I accounted for this doubling of tubes by swapping out his PIC18LF22SS with an atmega324pb, which
-    has around 30-ish GPIO pins. I directly drove every filament in use with a GPIO pin and a darlington
-    transistor. As this was my first 'major' hardware project, I didn't want to deal with extra IC
-    components like a serial to parallel shift register to complicate it any more.
-  </p>
-</mat-card>
+<a href="https://imgur.com/a/sMkJgo1" target="_blank" class="no-underline">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Nixie Tube Wrist Watch</mat-card-title>
+      <mat-card-subtitle>Check the divergence!</mat-card-subtitle>
+    </mat-card-header>
+    <p>
+      This was one of my first exposures to hardware design beyond simple arudino proto boards that
+      drove small motors or read from simple sensors. I heavily based my schematic off of an existing
+      one I found online by <a href="http://www.cathodecorner.com/nixiewatch/firmware/firmware.html" target="_blank">David Forbes</a>.
+      The main difference is that mine uses four IN-17 nixie tubes instead of just two B5870L tubes.
+      I accounted for this doubling of tubes by swapping out his PIC18LF22SS with an atmega324pb, which
+      has around 30-ish GPIO pins. I directly drove every filament in use with a GPIO pin and a darlington
+      transistor. As this was my first 'major' hardware project, I didn't want to deal with extra IC
+      components like a serial to parallel shift register to complicate it any more.
+    </p>
+  </mat-card>
+</a>
