--- a/src/app/projects/projects_page.scss
+++ b/src/app/projects/projects_page.scss
@@ -1,5 +1,6 @@
 mat-card {
   margin: 20px 5%;
+  cursor: pointer;
 
   mat-card-header {    
     justify-content: space-between;
@@ -13,4 +14,9 @@ mat-card {
 :host {
   display: block;
   padding-bottom: 20px;
+}
+
+/* Removes the underline from the material cards being wrapped in <a> tags. */
+.no-underline {
+  text-decoration: none;
 }
