Moving burning man 2023 pics to imgur

--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -20,12 +20,13 @@
     new camp mates I wanted to make an impression so I bought sushi in Reno and kept it on ice for the last hour drive
     out to the playa.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1dcpKKfxqnnMkN6m68u5JMPxxxNrlu4HU" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1dfepnJDoDTPxKHDiRgCkD1K2I0Lprm9w" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1dy2W83cd1S-dxdaGiBielPX_VHlsa1n1" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1eQCwouvilXuVQUsONlq7RhDnFdKVYWLu" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1f3U4ctb_BYvZrBq96U2spH7A1YK8yazB" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1frAMFJoDtbgOj40lqdMiy0xGEfTS0GBd" />
+  <img loading="lazy" src="https://imgur.com/jFwj1PE.jpg" />
+  <img loading="lazy" src="https://imgur.com/5H5p40Y.jpg" />
+  <img loading="lazy" src="https://imgur.com/UmbLGVb.jpg" />
+  <img loading="lazy" src="https://imgur.com/5DPOgp9.jpg" />
+  <img loading="lazy" src="https://imgur.com/wWQFJ2O.jpg" />
+  <img loading="lazy" src="https://imgur.com/XwX2dhE.jpg" />
+  <img loading="lazy" src="https://imgur.com/W0u7scg.jpg" />
   <p>
     This next image is one of my favorite pictures of the entire burn, because it's very representative of the kind of thing
     you experience at night when biking through deep playa. Riding off into the dark while high, you hear the distant
@@ -36,13 +37,13 @@
     oasis in vast nothingness around you. You knock on the door with a smile, and are greated with warm smiles in
     return. The interior is wooden paneled and decorated to make you feel like you're below deck on a wooden ship. 
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1f24V_l4E6qCcqEAPNonqZeuvBzPboFtT" />
+  <img loading="lazy" src="https://imgur.com/rvEDasB.jpg" />
 
   <div class="divider"></div>
   <h2>Friday</h2>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1eJam7MQq8hFLr7fZHeFjXEL--wbkCPa_" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fq4qjrR56wBkms1A4nY4SFyTsT7dhcIh" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fbN-gbsk6_wRhy4o1rSZ09mYE2OmC6Nh" />
+  <img loading="lazy" src="https://imgur.com/b6sm1ZA.jpg" />
+  <img loading="lazy" src="https://imgur.com/pGaYQd8.jpg" />
+  <img loading="lazy" src="https://imgur.com/VcWDzWO.jpg" />
   <p>
     This peice was one of my favorites, it was a giant bison made of driftwood with a guiding lantern the illuminated
     the night from a distance, and once you approached it there would be a ladder to climb up onto a porch alongside
@@ -50,9 +51,9 @@
     up cottage living room, complete with a rocking chair, wood-burning cast iron fireplace, rugs, and a small
     chandelier at head level. I regret not getting more pictures of this one!
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fTRwkDn6vEJWsC240-GM7sqgABi-HlyJ" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fC-7S0hK4nHbfc3KJ0vqti5kr3cfBFx8" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fGJdrG6KSzC0xqMBY-xnw-xH88VqLp5R" />
+  <img loading="lazy" src="https://imgur.com/gcB6gtx.jpg" />
+  <img loading="lazy" src="https://imgur.com/bntdbYV.jpg" />
+  <img loading="lazy" src="https://imgur.com/vsjDZMZ.jpg" />
   <p>
     I visited the temple, but didn't take any pictures besides this one from the outside. As you approach it, the crowds
     energy completely changes and everything becomes silent and pensive. The air practically weighs heavily in your lungs
@@ -64,16 +65,16 @@
     temple; I had no grief in my heart that merited release. I felt with each letter or open note I saw, I was intruding
     deeply into some stranger's life. 
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fTitUpWW1vzaINwgbUSkrrrAaAXpbpih" />
+  <img loading="lazy" src="https://imgur.com/0N13gLb.jpg" />
   
   <div class="divider"></div>
   <h2>Saturday</h2>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1f099hljTuJ8JC9OwZEZ8brcbwOZfOJDZ" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1eIt9fFILRSW8hvPFBspF7cU6uRP6GktA" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1eIsBRl-FJFAgt3tD8jP59kP0NUtBXPPU" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fNU-LlmRO2yaawkyL1YEbHw8VlcLTXl7" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fN_XTET2VT57lVDMYlnUs5MhUlYKh0xS" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fh-Ec1AlbD6uDHN0sEYlarZh75LqWy_N" />
+  <img loading="lazy" src="https://imgur.com/9YeBNCO.jpg" />
+  <img loading="lazy" src="https://imgur.com/msuqoh0.jpg" />
+  <img loading="lazy" src="https://imgur.com/DdHgoD4.jpg" />
+  <img loading="lazy" src="https://imgur.com/0KZDVZx.jpg" />
+  <img loading="lazy" src="https://imgur.com/s6xjGOs.jpg" />
+  <img loading="lazy" src="https://imgur.com/l0fWWsO.jpg" />
   <p>
     Towards one of the very farthest corners of the outer play, I saw the very faintest of yellow lights flickering like
     a candle in the far distance. It was so small that I thought it might be someone's distant headlamp but as it
@@ -82,14 +83,14 @@
     sausage grill! It was a father-son duo that built it and hauled it out there. A dozen people were around it, how could
     I have missed this after so much time exploring out here?
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1h8Q0Z2CL5Kfeg66mS1QqcwmXHRWidmrG" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fgtlRrmWd3eGwOiIo-8wVEvp5EFw1FX7" />
+  <img loading="lazy" src="https://imgur.com/ECzRKVv.jpg" />
+  <img loading="lazy" src="https://imgur.com/Vck4VXI.jpg" />
 
   <div class="divider"></div>
   <h2>Sunday</h2>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1gEHinc47Zo0VVTRi-CRkC40ejcLyV1vU" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1gC1jjgVhm18mlAr0tGQszk8jzBTkLbPy" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1gfTB-piVn5TtMAe6VWa_NlGud9eXGUa0" />
+  <img loading="lazy" src="https://imgur.com/rKyLRTV.jpg" />
+  <img loading="lazy" src="https://imgur.com/kVVv3J7.jpg" />
+  <img loading="lazy" src="https://imgur.com/3LJwWuQ.jpg" />
   <p>
     Watching the man burn was incredible. Not only was it by far the largest bonfire I'd ever seen by far, but it had
     legitimately the best fireworks show I've ever seen in my life. It's not by video, but
@@ -100,7 +101,7 @@
     materialized out of nowhere in an instant. The audible <b>POP!</b> of it hits you delayed and it really drives home
     the size of the pyrotechnics going on.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1gZMhMmmCasD4pDIidUVBUb0kdYTV_UGw" />
+  <img loading="lazy" src="https://imgur.com/CL5Ra65.jpg" />
   <p>
     As the man and structure he's on burns down to a smoldering hill and the radiant heat begins to border on being
     tolerable, the guards allow everyone to approach. A large portion of people begin stripping off their clothes and
@@ -111,12 +112,13 @@
     15 minutes through the hundreds of side lined crowd looking for my clothes pile. Being naked around strangers you'll
     never see again wasn't as big an issue as how cold it was getting without direct line of sight to the bonfire. 
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1ggWO04R0GZzAJW6Cq07mZ2Um86QHFBmD" />
+  <img loading="lazy" src="https://imgur.com/5ZjFceb.jpg" />
   <p>
     While the ferver of the the main burn was slowing down, all the art cars had been encircling the area, all on full
     display for the main night, car after car lined up pouring out music and light.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1h01dqqYqIiBEN-VzYfe835pUH3M2K5to" />
+  <img loading="lazy" src="https://imgur.com/ynvLADj.jpg" />
+  <img loading="lazy" src="https://imgur.com/iRm7Vnd.jpg" />
 
   
 </mat-card>
