Migrating shasta mountaineering pics to imgur

--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -117,6 +117,7 @@
     While the ferver of the the main burn was slowing down, all the art cars had been encircling the area, all on full
     display for the main night, car after car lined up pouring out music and light.
   </p>
+  <img loading="lazy" src="https://imgur.com/rYbtABg.jpg" />
   <img loading="lazy" src="https://imgur.com/ynvLADj.jpg" />
   <img loading="lazy" src="https://imgur.com/iRm7Vnd.jpg" />
 
