Adding thumbnails to travels and projects entries

--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -134,7 +134,7 @@
 
     <iframe class="youtube-player" src="https://www.youtube.com/embed/MbiAI1LF5Ec" frameborder="0"
       allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-    <img loading="lazy" src="https://imgur.com/3wcLMFN" />
+    <img loading="lazy" src="https://imgur.com/3wcLMFN.jpg" />
     Crossing over the top you could look out to the next valley of smaller dunes and an oasis. If you look far enough
     you could see north-to-south stretching dune ridgelines that climb very tall, with relative valleys between them
     filled with smaller dunes for a while. The oasis was surprisingly empty.
