--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -44,6 +44,7 @@
     else. A few key experiences made me have second thoughts on that impression, and when I was offered
     a spot at a camp I took it and went to see what the hype was about.
   </p>
+  <img loading="lazy" src="https://imgur.com/CL5Ra65.jpg" />
 </mat-card>
 
 <mat-card routerLink="/shasta">
@@ -55,6 +56,7 @@
     I solo climbed Mt. Shasta over 2 days, ascenting the Avalanche Gulch route and taking my snowboarding gear with me
     to backcountry ride back down after summitting
   </p>
+  <img loading="lazy" src="https://imgur.com/z6m5jsM.jpg" />\
 </mat-card>
 
   <mat-card routerLink="/mauritania-trip">
@@ -66,6 +68,7 @@
       In the early spring of 2023 I solo traveled to Mauritania, west Africa to hike through a portion
       of the Sahara desert over 6 and a half days, and hop the worlds longest freight train.
     </p>
+    <img loading="lazy" src="https://imgur.com/VGU6TyD.jpg" />
   </mat-card>
 
 <a href="https://www.advrider.com/f/threads/san-francisco-to-tuktoyaktuk-2022.1559749/" target="_blank" class="no-underline">
@@ -80,6 +83,7 @@
       the Yukon, then rode the Dempster Highway to the town of Tuktoyaktuk, NWT Canada to see the
       Arctic Ocean.
     </p>
+    <img loading="lazy" src="https://www.advrider.com/f/attachments/pxl_20220711_173545624-2-jpg.3962085/">
   </mat-card>
 </a>
 
@@ -94,5 +98,6 @@
       Salt Lake City Utah. This covered ~700 miles of dirt road and many stops along the way at historic
       stations used by the original Pony Express business.
     </p>
+    <img loading="lazy" src="https://www.advrider.com/f/attachments/pxl_20210824_010223547-jpg.3153121/">
   </mat-card>
 </a>
