--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -13,6 +13,7 @@
   <p>
     A nice an concise set of CSS injections I add to specific websites for better browsing experience.
   </p>
+  <img loading="lazy" src="https://imgur.com/TInQo0o.jpg" />
 </mat-card>
 
 <a href="https://imgur.com/a/BrJ20zV" target="_blank" class="no-underline">
@@ -26,6 +27,7 @@
       I was able to snag a few of them and recreate the wall in a miniature version! It even uses
       a depth camera to show your silhouette in real time as you move in front of it like the original.
     </p>
+    <img loading="lazy" src="https://imgur.com/wFl4yZp.jpg" />
   </mat-card>
 </a>
 
@@ -39,6 +41,7 @@
     I found some art online that inspired me to try out making faux neon signs out of led strips
     tucked inside of diffuser tubing. The end result speaks for itself!
   </p>
+  <img loading="lazy" src="https://imgur.com/7oWPc71.jpg" />
 </mat-card>
 </a>
 
@@ -66,6 +69,7 @@
     The QR code goes to qrtatt.ooo, and can do some very fancy stuff! Click the link in the upper
     right to go to the full page I dedicated to talking about the tattoo.
   </p>
+  <img loading="lazy" src="https://imgur.com/iFGwWLA.jpg" />
 </mat-card>
 
 <a href="https://imgur.com/a/L7AnwLG" target="_blank" class="no-underline">
@@ -85,9 +89,7 @@
       too much parasitic capacitance or other inteference when nestled in the digital watch case.
       I'll need to figure this out to solve it and call it done.
     </p>
-    <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="a/L7AnwLG"  >
-      <a href="https://imgur.com/a/L7AnwLG" target="_blank">Progress on custom contactless payment watch</a>
-    </blockquote> -->
+    <img loading="lazy" src="https://imgur.com/WboU1Qg.jpg" />
   </mat-card>
 </a>
 
@@ -107,6 +109,7 @@
     <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="a/YKbkF02">
       <a href="https://imgur.com/a/YKbkF02" target="_blank">Electric Mountainboard build</a>
     </blockquote> -->
+    <img loading="lazy" src="https://imgur.com/MCgCxjL.jpg" />
   </mat-card>
 </a>
 
@@ -126,6 +129,7 @@
       based on <a href="http://www.datasheetspdf.com/pdf-down/H/D/S/HDSP2000_Hewlett-Packard.pdf" target="_blank">these xerox scans</a>
       of old datasheets from the 1970's.
     </p>
+    <img loading="lazy" src="https://imgur.com/qUIIJmQ.jpg" />
   </mat-card>
 </a>
 
@@ -145,5 +149,6 @@
       transistor. As this was my first 'major' hardware project, I didn't want to deal with extra IC
       components like a serial to parallel shift register to complicate it any more.
     </p>
+    <img loading="lazy" src="https://imgur.com/dHJe2YO.jpg" />
   </mat-card>
 </a>
