--- a/src/app/projects/projects_page.scss
+++ b/src/app/projects/projects_page.scss
@@ -20,3 +20,9 @@ mat-card {
 .no-underline {
   text-decoration: none;
 }
+
+img {
+  min-height: 130px;
+  padding: 0 16px;
+  width: calc(100% - 32px);
+}
