--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -15,6 +15,7 @@
     ride from California to the very bottom of South America. I left my job in order to properly
     accomplish this one.
   </p>
+  <img loading="lazy" src="https://t4.ftcdn.net/jpg/02/38/52/19/360_F_238521952_fBFiEJuryfKNUJ6ElmZChaQIMv6CzGWV.jpg" />
 </mat-card>
 
 <!-- 
@@ -56,7 +57,7 @@
     I solo climbed Mt. Shasta over 2 days, ascenting the Avalanche Gulch route and taking my snowboarding gear with me
     to backcountry ride back down after summitting
   </p>
-  <img loading="lazy" src="https://imgur.com/z6m5jsM.jpg" />\
+  <img loading="lazy" src="https://imgur.com/z6m5jsM.jpg" />
 </mat-card>
 
   <mat-card routerLink="/mauritania-trip">
