Typo fixes and misc improvements

--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -34,7 +34,7 @@
     the horizon, and you decide to venture deeper into the desert to see what they are, like an angler fish drawing in
     curious creatures from the darkness. The warm wind is moderately blowing, kicking up a slow rolling cloud of dust
     everywhere you go and as you get closer to the light source you see it's a mobile converted bus, parked like an
-    oasis in vast nothingness around you. You knock on the door with a smile, and are greated with warm smiles in
+    oasis in vast nothingness around you. You knock on the door with a smile, and are greeted with warm smiles in
     return. The interior is wooden paneled and decorated to make you feel like you're below deck on a wooden ship. 
   </p>
   <img loading="lazy" src="https://imgur.com/rvEDasB.jpg" />
@@ -59,7 +59,7 @@
     energy completely changes and everything becomes silent and pensive. The air practically weighs heavily in your lungs
     with how somber the mood is inside. The central room is surrounded by a circular ring-shaped pathway with numerous
     alcoves to maximize the surface area on the walls. Even still, the walls are filled to the brim with stapled on
-    letters addressed to the deceased, memorial posters, sharpied notes onto the walls, and sentimental memorabilia.
+    letters addressed to the deceased, memorial posters, sharpie-d notes onto the walls, and sentimental memorabilia.
     Groups of people sit in silence together in the alcoves and central room in silence, many silently crying. The structure
     is designed to be burned down the day after the man burns, as a cathartic release. I felt conflicted being in the
     temple; I had no grief in my heart that merited release. I felt with each letter or open note I saw, I was intruding
@@ -107,14 +107,14 @@
     tolerable, the guards allow everyone to approach. A large portion of people begin stripping off their clothes and
     start to run in a massive circle around the bonfire. I joined in and followed the crowd as it raced around, the heat
     unbelievably hot. The pile was square in shape and rounding the corners was so hot at times you'd be jumping over
-    the section and poeple would be on the sidelines with spray bottles of water to help cool you off. I set me clothes
+    the section and people would be on the sidelines with spray bottles of water to help cool you off. I set me clothes
     on the ground, but completely lost track of them by the time I was ready to get dressed again and wandered naked for
     15 minutes through the hundreds of side lined crowd looking for my clothes pile. Being naked around strangers you'll
     never see again wasn't as big an issue as how cold it was getting without direct line of sight to the bonfire. 
   </p>
   <img loading="lazy" src="https://imgur.com/5ZjFceb.jpg" />
   <p>
-    While the ferver of the the main burn was slowing down, all the art cars had been encircling the area, all on full
+    While the fervor of the the main burn was slowing down, all the art cars had been encircling the area, all on full
     display for the main night, car after car lined up pouring out music and light.
   </p>
   <img loading="lazy" src="https://imgur.com/rYbtABg.jpg" />
