--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -64,13 +64,13 @@
     didn't enjoy smiling. Reaching Atar, the wind had picked up significantly. Dust was kicked up into your eyes and on
     your face constantly. A simple hiking hat didn't stop all the dust and dirt. Eventually I got help from someone
     to lead me through town to a store that sold tuareg head wraps. You see a lot of locals wear them, they're fairly
-    iconic of the region. And bought one for 150 MRU. After this I got a shared taxi to my auburge. In the shared taxi
+    iconic of the region. And bought one for 150 MRU. After this I got a shared taxi to my auberge. In the shared taxi
     was someone else from the minibus; two women in head to toe coverings except for eyes. They had massive amounts of
     rice, water, and general supplies. We stopped by their house and I helped everyone unload the taxi that was
     brimming full. Next the driver dropped me off and I met my initial contact, Namoud. He runs
     <a href="https://goo.gl/maps/dDzoNgkv4mybgtj58" target="_blank">Camping Inimi</a>, and is the contact I was put in
     touch with by a German couple, who I reached out to on a motorcycle forum I'm on. Namoud was awesome. I recommend
-    you reach out to him if you are thinking about visiting Mauritania and doing any inland signseeing/tourism. He
+    you reach out to him if you are thinking about visiting Mauritania and doing any inland sightseeing/tourism. He
     organized the guides and plan for me over email. Very friendly people! We spoke in english; the first time all day
     I had that luxury. He showed me around the premise and then we had coffee. I rested afterwards for a few hours,
     paid for everything, then helped collect water from their well for later purification. At this point it was almost
