--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -54,7 +54,7 @@
     <mat-card-subtitle>Searching for Telos (not really)</mat-card-subtitle>
   </mat-card-header>
   <p>
-    I solo climbed Mt. Shasta over 2 days, ascenting the Avalanche Gulch route and taking my snowboarding gear with me
+    I solo climbed Mt. Shasta over 2 days, ascending the Avalanche Gulch route and taking my snowboarding gear with me
     to backcountry ride back down after summitting
   </p>
   <img loading="lazy" src="https://imgur.com/z6m5jsM.jpg" />
@@ -79,9 +79,9 @@
       <mat-card-subtitle>About as remote as you can get</mat-card-subtitle>
     </mat-card-header>
     <p>
-      I rode my motorcycle from the SF Bay Area up the California coast, Orgeon coast, Washington
+      I rode my motorcycle from the SF Bay Area up the California coast, Oregon coast, Washington
       coast, took a ferry to Vancouver island, took another ferry back to Prince Rupert BC, rode to
-      the Yukon, then rode the Dempster Highway to the town of Tuktoyaktuk, NWT Canada to see the
+      the Yukon, then rode the Dempster Highway to the town of Tuktoyaktuk, Northwest Territories of Canada to see the
       Arctic Ocean.
     </p>
     <img loading="lazy" src="https://www.advrider.com/f/attachments/pxl_20220711_173545624-2-jpg.3962085/">
