--- a/src/app/projects/cssinjection/css_injection_page.html
+++ b/src/app/projects/cssinjection/css_injection_page.html
@@ -5,9 +5,10 @@
   <a mat-tab-link routerLink="/career">Career</a>
 </nav>
 
-<mat-card-title>CSS Injection</mat-card-title>
-
 <mat-card>
+  <h1 style="text-align: center">CSS Injection</h1>
+  <div class="divider"></div>
+
   <p class="disclaimer">DISCLAIMER: I do not own the chrome extension, know it's developer, or
     have been paid to endorse it. My thoughts are my own.</p>
   <p>
