--- a/src/app/projects/cssinjection/css_injection_page.scss
+++ b/src/app/projects/cssinjection/css_injection_page.scss
@@ -12,6 +12,11 @@ mat-card-title {
   font-size: 1.1rem;
 }
 
+.divider {
+  border-top: 1px solid white;
+  margin-bottom: 1em;
+}
+
 .code-container {
   max-width: fit-content;
   overflow-x: auto;
