--- a/src/app/qr/aboutqr/about_qr_page.html
+++ b/src/app/qr/aboutqr/about_qr_page.html
@@ -1,19 +1,105 @@
 <nav mat-tab-nav-bar>
-    <a mat-tab-link routerLink="/">Home</a>
-    <a mat-tab-link routerLink="/travels">Travels</a>
-    <a mat-tab-link routerLink="/projects">Projects</a>
-    <a mat-tab-link routerLink="/career">Career</a>
+  <a mat-tab-link routerLink="/">Home</a>
+  <a mat-tab-link routerLink="/travels">Travels</a>
+  <a mat-tab-link routerLink="/projects">Projects</a>
+	<a mat-tab-link routerLink="/career">Career</a>
 </nav>
   
 <div class="page-container">
-    <mat-card>
+  <mat-card>
     <h1>About the QR Tattoo</h1>
-    <!-- <img src="https://i.imgur.com/r9Nmh7d.jpg"> -->
-        <span>{{description}}</span>
-        <div *ngFor="let faq of faqs">
-            <div class="divider"></div>
-            <h2>{{faq.question}}</h2>
-            <div>{{faq.answer}}</div>
-        </div>
+    <img src="https://i.imgur.com/r9Nmh7d.jpg">
+      <span>
+			 This is a tattoo of a QR code that links to qrtatt.ooo. I 'own' this domain, and have it
+        pointed at a reserved landing page on my personal website - blakewilliams.org - which is
+        hosted on GitHub Pages. Unlike a vast majority of QR codes that will direct you to some
+        fixed URL, this code is 'dynamic'. This means that I can change it's functionality as I
+        please. I created a custom android app that for this! On my phone I select from a pre-set
+        list of abilities I've written accounted for, then behind the scenes I call Github's
+        REST API to commit the changes to a JSON file stored on GitHub. For example, the landing
+        page can redirect to any other URL of my choosing, prompt a download for a VCF contact file,
+        open a chat with me on whatsapp/telegram/twitter/etc... and many more. The QR code landing
+        page reads the config file and then determines what info to show or where to redirect users
+        to from there.
+			</span>
+			
+      <ul>
+        <li>
+          <h2>There are a bunch of websites that offer 'dynamic' QR codes, how is this different?</h2>
+          <div>
+						Technically it's not; it's the same core offering you may see from sites like Scanova,
+            but the key here is that I control the whole process. I don't have to wonder if Scanova or equivalent
+            will be around in X decades from now. I have the domain and can build/link to my web projects
+            as I please.
+					</div>
+        </li>
+
+				<li>
+          <h2>What if you loose the domain?</h2>
+          <div>
+						While nobody (not even large companies) can outright own a domain
+            indefinitely, you can lease them for up to 10 years at a time from ICANN.
+            Mine is good till at least 2030, and I have auto-renew payment set up so
+            I don\'t expect lapses in URL ownership.
+					</div>
+        </li>
+
+				<li>
+          <h2>Why not just have a business card or keychain of it? Why does it need to be a tattoo?</h2>
+          <div>
+						Right, it doesn't need to be a tattoo. Nothing in this project is wholly new or
+            innovative; I recognize that it's about as much effort for a user to scan my arm as it
+            is to just give the info verbally or by typing it into their phone. It's just more novel.
+					</div>
+        </li>
+
+				<li>
+          <h2>What if GitHub stops support for their API?</h2>
+          <div>
+						Then I'll just keep the config elsewhere on the internet that
+            does allow for APIs to modify repos. :)
+					</div>
+        </li>
+
+				<li>
+          <h2>What if GitHub stops allowing users to host their personal websites with GH Pages?</h2>
+          <div>
+						Then I\'ll just host my site on another platform or pay for server space. There
+            will ALWAYS be website hosting services as long as the internet continues to exist.
+					</div>
+        </li>
+
+				<li>
+          <h2>APIs change, services migrate, technology moves on changes. What if one day it stops working?</h2>
+          <div>
+						Similar to the previous questions, I\'ll just update my code and serving methods.
+            Nothing is forever and yes like everything else on the internet it does occasionally
+            require some maintenance to stay running. 
+            <iframe src="https://www.youtube.com/embed/BxV14h0kFs0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+        </li>
+
+				<li>
+          <h2>What if the tattoo blurs or fades?</h2>
+          <div>
+						I'm purposefully getting the tattoo slightly under-inked to anticipate
+            this. <a href="https://i.imgur.com/JY7AY3n.jpeg" target="_blank">Here is an example
+            of a tattoo from someone else that still works but is showing ink bleeding</a>.
+            Also if the fade still gets too bad several decades down the road, laser removal
+            can re-sharpen the edges.
+					</div>
+        </li>
+
+				<li>
+          <h2>What if your skin gets wrinkly as you age?</h2>
+          <div>
+						Then I'll probably need to stretch it taut to get good reading, or maybe it just
+						eventually will cease to work; what do you
+            expect? I'm not going to NOT get a tattoo now because of how my skin's tightness may
+            or may not be in my final couple decades. For all tattoos, there's still a massive
+            amount of enjoyment people get from them even if the canvas degrades eventually.
+					</div>
+        </li>
+      </ul>
     </mat-card>
 </div>
