--- a/src/app/qr/aboutqr/about_qr_page.scss
+++ b/src/app/qr/aboutqr/about_qr_page.scss
@@ -1,25 +1,24 @@
 .page-container {
-    margin: 20px 5%;
+  margin: 20px 5%;
 }
 
 mat-card {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+img {
+  width: 100%;
 }
 
 h2 {
-    margin: 0;
+  margin: 0;
 }
 
-.divider {
-    border-top: 1px solid white;
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
+li {
+  margin-bottom: 20px;
+}
 
-.header-description-divider {
-    background-image: linear-gradient(to right, #f81d00 0%, #f9d423 100%);height: 1px;
-    left: -24px;
-    margin-bottom: 12px;
-    position: relative;
-    width: calc(100% + 48px);
+iframe {
+  width: 100%;
+  aspect-ratio: 16/9;
 }
