Minor CSS improvements on travel/project main pages

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -5,6 +5,7 @@
   <a mat-tab-link routerLink="/career">Career</a>
 </nav>
 
+<div class="page-container">
 <mat-card routerLink="/css-injection">
   <mat-card-header>
     <mat-card-title>CSS Injections for Websites</mat-card-title>
@@ -152,3 +153,4 @@
     <img loading="lazy" src="https://imgur.com/dHJe2YO.jpg" />
   </mat-card>
 </a>
+</div>
