--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -5,6 +5,7 @@
   <a mat-tab-link routerLink="/career">Career</a>
 </nav>
 
+<div class="page-container">
 <mat-card routerLink="/road-to-ushuaia">
   <mat-card-header>
     <mat-card-title>Motorcycle ride from San Francisco to the Ushuaia, Argentina (Upcoming)</mat-card-title>
@@ -102,3 +103,4 @@
     <img loading="lazy" src="https://www.advrider.com/f/attachments/pxl_20210824_010223547-jpg.3153121/">
   </mat-card>
 </a>
+</div>
